--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "5.1.3",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
+    "axios": "^0.26.1",
+    "react": "^18.0.0",
+    "react-datepicker": "^4.7.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.9",
+    "sass": "^1.49.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
